# mlir_pass

./: .clangd  .cursorrules  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cursor/: mcp.json
.cursor/rules/: code-review-graph.mdc  rtc-wrapper.mdc  terminal-autonomy.mdc
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-23-mlir-ai-compiler-demo.md
docs/superpowers/specs/: 2026-05-23-mlir-ai-compiler-demo-design.md  2026-06-16-affine-vector-lowering-design.md
include/AICompiler/: Passes.h  Passes.td  Pipeline.h  PipelineStages.h
lib/: CMakeLists.txt
lib/Pipeline/: CMakeLists.txt  Pipeline.cpp  PipelineStages.cpp
lib/Transforms/: AttentionLegalize.cpp  BroadcastSimplify.cpp  Bufferization.cpp  CMakeLists.txt  ConvBNFusion.cpp  ConvBNReluFusion.cpp  CustomAffineOpt.cpp  CustomBufferOpt.cpp  CustomLLVMCleanup.cpp  CustomLinalgOpt.cpp  CustomLinalgTile.cpp  CustomLinalgToParallelLoops.cpp  CustomLoopTiling.cpp  CustomVectorOpt.cpp  ElementwiseChainLegalize.cpp  FlashAttentionTile.cpp  GeluLegalize.cpp  HorizontalGemmFusion.cpp  KVCacheLegalize.cpp  LLVMLowering.cpp  LayerNormLegalize.cpp  LayoutBridgeLegalize.cpp  LayoutFold.cpp  LinalgOptimization.cpp  LowerToAffine.cpp  LowerToLoops.cpp  LowerToVectorDialect.cpp  MatMulBiasFusion.cpp  ProducerConsumerLegalize.cpp  QdqLegalize.cpp  RMSNormLegalize.cpp  RegisterPasses.cpp  RoPELegalize.cpp  SoftmaxLegalize.cpp  StableHLOToLinalg.cpp  StablehloConstantFold.cpp  SwiGLULegalize.cpp  Vectorization.cpp
scripts/: run_attention_e2e.sh  run_broadcast_e2e.sh  run_dynamic_e2e.sh  run_jit_golden.py  run_jit_golden.sh  run_kvcache_e2e.sh  run_layout_e2e.sh  run_partition_smoke.sh  run_pipeline_demo.sh  run_quant_e2e.sh  run_torch_e2e.sh  run_transformer_e2e.sh  sync_partition_fixture.py  test_all.sh  test_lit_filecheck.sh  test_pipeline_demo.sh  test_shell_regression.sh
test/: CMakeLists.txt  conv_bn_relu.mlir  jit_gelu.mlir  jit_scale.mlir  jit_swiglu.mlir  matmul_add.mlir  mini_model.mlir  run_tests.sh
test/fixtures/: attention_p4.mlir  broadcast_p4.mlir  conv_bn_torch.mlir  conv_bn_torch_jit.mlir  decode_step_p4.mlir  dynamic_batch_p4.mlir  gelu_p4.mlir  gelu_p4_jit.mlir  horizontal_gemm_p4.mlir  layernorm_p4.mlir  layout_conv_p4.mlir  matmul_bias_p4.mlir  matmul_softmax_p4.mlir  qdq_matmul_p11.mlir  qdq_matmul_p4.mlir  rmsnorm_p4.mlir  rope_p4.mlir  softmax_p4.mlir  swiglu_p4.mlir  swiglu_p4_jit.mlir  transformer_block_p4.mlir
test/lit/: affine_lowering.mlir  attention_fusion_e2e.mlir  attention_legalize.mlir  broadcast_simplify.mlir  bufferize_smoke.mlir  canonicalize_cse_smoke.mlir  constant_fold.mlir  conv_bn_fusion.mlir  conv_bn_relu_fusion.mlir  decode_loop.mlir  dynamic_batch.mlir  elementwise_chain_legalize.mlir  flash_attention_tile.mlir  gelu_legalize.mlir  gelu_linalg_smoke.mlir  graph_partition_smoke.mlir  horizontal_gemm_fusion.mlir  kvcache_legalize.mlir  layernorm_fusion_e2e.mlir  layernorm_legalize.mlir  layout_bridge_legalize.mlir  linalg_fusion_smoke.mlir  linalg_tile_fuse_smoke.mlir  linalg_tile_smoke.mlir  lit.cfg.py  lit.site.cfg.py.in  loops_smoke.mlir  matmul_bias_fusion.mlir  producer_consumer_legalize.mlir  qdq_legalize.mlir  rmsnorm_fusion_e2e.mlir  rmsnorm_legalize.mlir  rope_fusion_e2e.mlir  rope_legalize.mlir  shape_get_dimension_size.mlir  shape_refine_batch.mlir  softmax_fusion_e2e.mlir  softmax_legalize.mlir  swiglu_legalize.mlir  transformer_block_fusion_e2e.mlir  (+1 more)
tools/: CMakeLists.txt
tools/ai-compiler-demo/: CMakeLists.txt  main.cpp
tools/mlir-opt-plugin/: AICompilerPlugin.cpp  CMakeLists.txt  run_aicom_mlir_opt.sh.in
tools/pipe-demo/: main.cpp
